# graceful-shutdown

./: Cargo.toml  LICENSE  README.md  generate_man_page.sh
man/: graceful-shutdown.1
src/: main.rs  matcher.rs  options.rs  processes.rs  signal.rs
