[package]
name = "graceful-shutdown"
description = "Terminate a list of processes and wait for them to exit."
version = "1.0.0"
authors = ["Magnus Bergmark <magnus.bergmark@gmail.com>"]

repository = "https://github.com/Mange/graceful-shutdown"
readme = "README.md"
license = "MIT"

[dependencies]
structopt = "0.2.10"
nix = "0.11.0"
regex = "1.0.4"
users = "0.7.0"
termion = "1.5.1"
failure = "0.1.2"
