[package]
name = "graceful-shutdown"
description = "Terminate a list of processes and wait for them to exit."
version = "1.0.0"
authors = ["Magnus Bergmark <magnus.bergmark@gmail.com>"]

repository = "https://github.com/Mange/graceful-shutdown"
readme = "README.md"
license = "MIT"

[dependencies]
structopt = "0.2.10"
nix = { version = "0.29.0", features = ["signal", "process"] }
regex = "1.11.1"
users = "0.11.0"
termion = "4.0.4"
failure = "0.1.2"
